<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
            android:id="@+id/action_save"
            android:icon="@drawable/ic_action_save_restaurant"
            android:title="@string/save_day"
            app:showAsAction="ifRoom|collapseActionView"/>

    <item
            android:id="@+id/action_add_day"
            android:icon="@drawable/ic_action_add"
            android:title="@string/add_day"
            app:showAsAction="ifRoom|collapseActionView"/>

    <item
            android:id="@+id/action_set_place"
            android:title="@string/action_set_location"
            android:visible="true"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_attach_picture"
            android:title="@string/action_attach_picture"
            android:visible="true"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_attach_restaurant"
            android:title="@string/action_attach_restaurant"
            android:visible="true"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_delete"
            android:title="@string/delete_day"
            android:visible="true"
            app:showAsAction="never"/>

    <item
            android:id="@+id/action_trip_header"
            android:title="@string/trip_header"/>
</menu>