<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:elevation="4dp">

        <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    android:id="@+id/frameLayout">

                <fragment
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"/>

            </FrameLayout>


            <LinearLayout
                    android:layout_weight="1"
                    android:lines="1"
                    android:id="@+id/placeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_place_name"
                    android:textColor="?attr/editTextColor"
                    android:orientation="vertical"
                    android:background="@color/white_transparent"
                    android:layout_marginTop="8dp">
                <fragment
                        android:id="@+id/fragment_autocomplete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                        android:singleLine="true">
                </fragment>

            </LinearLayout>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            android:id="@+id/scrolling_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <android.support.constraint.ConstraintLayout
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/header_detail_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="@dimen/fab_margin"
                tools:context=".ui.activities.AddNewTripActivity"
        >

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_event"
                    android:layout_weight="0"
                    android:id="@+id/imageView"
                    app:layout_constraintStart_toStartOf="@+id/imageView2" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="@+id/to_date"/>
            <TextView
                    android:text="@string/to_date_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView4"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="@+id/imageView"/>
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/trip_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:ems="10"
                    android:hint="@string/prompt_trip_title"
                    android:maxLines="1"
                    android:popupBackground="@color/white"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:inputType="text"
                    tools:targetApi="lollipop"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_alignParentTop="true" android:layout_alignParentStart="true"
                    android:textSize="16sp" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/bookmark"/>
            <ToggleButton
                    android:id="@+id/bookmark"
                    style="@style/toggleButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bookmark_toggle_bg"
                    tools:src="@mipmap/ic_launcher" android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@+id/trip_title"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="@+id/trip_title"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>


            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_event"
                    android:layout_weight="0"
                    android:id="@+id/imageView2"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="@+id/from_date"/>

            <TextView
                    android:text="@string/from_date_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView3"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    android:textColor="@color/black"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@+id/imageView2"/>
            <TextView
                    android:id="@+id/from_date"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:hint="@string/prompt_from_date"
                    android:textColor="?attr/editTextColor"
                    android:background="?attr/editTextBackground"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/trip_title"
                    app:layout_constraintStart_toEndOf="@+id/textView3" android:layout_marginStart="8dp"/>

            <TextView
                    android:id="@+id/to_date"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:hint="@string/prompt_to_date"
                    android:textColor="?attr/editTextColor"
                    android:background="?attr/editTextBackground"
                    app:layout_constraintStart_toStartOf="@+id/from_date"
                    app:layout_constraintTop_toBottomOf="@+id/from_date" android:layout_marginTop="16dp"/>


            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_person"
                    android:id="@+id/imageView3"
                    android:layout_weight="0"
                    app:layout_constraintTop_toTopOf="@+id/people_text"
                    app:layout_constraintStart_toStartOf="@+id/imageView"/>

            <TextView
                    android:text="@string/prompt_number_persons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/people_text"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/to_date"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="@+id/textView4"/>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/people_ti"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/people_text"
                    app:layout_constraintStart_toStartOf="@+id/people_text">
                <android.support.design.widget.TextInputEditText
                        android:layout_weight="1"
                        android:lines="1"
                        android:id="@+id/people"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:contentDescription="@string/prompt_number_persons"
                        android:textColor="?attr/editTextColor"
                        android:background="?attr/editTextBackground"
                        android:inputType="number"
                        android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                    android:text="@string/travelers_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/travelers_2"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toBottomOf="@+id/people_ti"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/travelers"
                    android:textSize="14sp" android:fontFamily="sans-serif"
                    android:hint="@string/travelers"
                    android:background="@null"
                    android:gravity="top"
                    android:minLines="2"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/travelers_2"
                    android:textColor="@color/grey"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location"
                    android:id="@+id/imageView4"
                    android:layout_weight="0"
                    app:layout_constraintStart_toStartOf="@+id/imageView3"
                    app:layout_constraintTop_toTopOf="@+id/place"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/place"
                    android:hint="@string/prompt_place_name"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    android:layout_marginStart="8dp"
                    android:singleLine="true"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="@+id/travelers" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/travelers"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>